<resources>
    <string name="app_name">Clean Architecture</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Dashboard</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="notifications_icon">Notification</string>
    <string name="allow_permissions_for_a_better_experience">Allow permissions for a better experience</string>
    <string name="camera_icon">Camera\n</string>
    <string name="library_icon">Library</string>
    <string name="microphone_icon">Microphone</string>
    <string name="step_indicator">step indicator</string>
    <string name="allow">Allow</string>
    <string name="start_screen">START SCREEN</string>
    <string name="error_username_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="cart">Cart</string>
</resources>